Fixed button alignment

--- a/main.css
+++ b/main.css
@@ -192,6 +192,8 @@ section {
     justify-content: center;
     border-radius: 15px;
     padding: 1rem;
+    width: 20%;
+    margin: 0.5rem;
     background-image: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(190, 190, 190, 1)) !important;
 }
 
@@ -203,8 +205,7 @@ section {
 }
 
 .intrest-image {
-    width: 7vw;
-    height: 7vw;
+    width:100%;
 }
 
 /* ========== Project section ========== */
